fixed menu items overflowing on wrap

--- a/src/components/theHeader/style.scss
+++ b/src/components/theHeader/style.scss
@@ -66,6 +66,7 @@ nav.menu {
   transition: all 300ms ease-in-out;
   background-color: var(--bg);
   padding: 2em;
+  overflow: hidden;
 
   &.menu-enter,
   &.menu-exit-active {
